crates/analyzer/tests/snapshots/errors__cast_address_to_u64.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: can't cast `address` to `u64`
  ┌─ [snippet]:3:3
  │
3 │   u64(address(0))
  │   ^^^ try `u256` here


